--- a/usb.html
+++ b/usb.html
@@ -5,7 +5,10 @@
     <title>WebUSB测试</title>
 	<script>
 		function connect() {
-			navigator.usb.getDevices().then(devices => {console.log(devices)})
+			navigator.usb.requestDevice({ filters: [{ vendorId: 0x2341 }] }).then(device => {
+				console.log(device.productName);      // "Arduino Micro"
+				console.log(device.manufacturerName); // "Arduino LLC"
+			}).catch(error => { console.log(error); });
 		}
 	</script>
 </head>
