--- a/usb.html
+++ b/usb.html
@@ -5,10 +5,27 @@
     <title>WebUSB测试</title>
 	<script>
 		function connect() {
-			navigator.usb.requestDevice({ filters: [{ vendorId: 0x0000 }] }).then(device => {
-				console.log(device.productName);      // "Arduino Micro"
-				console.log(device.manufacturerName); // "Arduino LLC"
-			}).catch(error => { console.log(error); });
+			var device;
+
+			navigator.usb.requestDevice({ filters: [{ vendorId: 0x0000 }] }).then(selectedDevice => {
+		   		device = selectedDevice;
+		   		return device.open(); // Begin a session.
+			 })
+			.then(() => device.selectConfiguration(1))
+			.then(() => device.claimInterface(2))
+			.then(() => device.controlTransferOut({ // Select configuration #1 for the device..then(() => device.claimInterface(2)) // Request exclusive control over interface #2..then(() => device.controlTransferOut({
+					requestType: 'class',
+					recipient: 'interface',
+					request: 0x22,
+					value: 0x01,
+					index: 0x02
+				})) // Ready to receive data
+			.then(() => device.transferIn(5, 64)) // Waiting for 64 bytes of data from endpoint #5.
+			.then(result => {
+		  		let decoder = new TextDecoder();
+		  		console.log('Received: ' + decoder.decode(result.data));
+			})
+			.catch(error => { console.log(error); });
 		}
 		function getDevices() {
 			navigator.usb.getDevices().then(device => {
